// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React component <Login /> should render a Login with typed data, especially checked out a correct work onChange and onSubmit functions 1`] = `
<div>
  <form
    className="login-form form-horizontal"
    data-state={
      Object {
        "email": "",
        "password": "",
      }
    }
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <div
        className="col-md-12 col-sm-12"
      >
        <input
          className="form-control"
          id="email"
          onChange={[Function]}
          placeholder="EMAIL"
          required={true}
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <div
        className="col-md-12 col-sm-12"
      >
        <input
          className="form-control"
          id="password"
          onChange={[Function]}
          placeholder="PASSWORD"
          required={true}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <div
        className="login-button col-md-12 col-sm-12"
      >
        <button
          className="main-button btn btn-lg btn-default"
          disabled={false}
          type="submit"
        >
          Login
        </button>
      </div>
    </div>
  </form>
  <p
    className="text-center text-or"
  >
    OR
  </p>
  <a
    className="signup-button"
    onClick={[Function]}
    style={Object {}}
  >
    <button
      className="signup btn btn-lg btn-default btn-block"
      disabled={false}
      type="button"
    >
      SIGN UP
    </button>
  </a>
</div>
`;

exports[`React component <Login /> should render a Login with typed data, especially checked out a correct work onChange and onSubmit functions 2`] = `
<div>
  <form
    className="login-form form-horizontal"
    data-state={
      Object {
        "email": "ivan.yarymovych@gmail.com",
        "password": "P!assword!1",
      }
    }
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <div
        className="col-md-12 col-sm-12"
      >
        <input
          className="form-control"
          id="email"
          onChange={[Function]}
          placeholder="EMAIL"
          required={true}
          type="email"
          value="ivan.yarymovych@gmail.com"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <div
        className="col-md-12 col-sm-12"
      >
        <input
          className="form-control"
          id="password"
          onChange={[Function]}
          placeholder="PASSWORD"
          required={true}
          type="password"
          value="P!assword!1"
        />
      </div>
    </div>
    <div
      className="form-group"
    >
      <div
        className="login-button col-md-12 col-sm-12"
      >
        <button
          className="main-button btn btn-lg btn-default"
          disabled={false}
          type="submit"
        >
          Login
        </button>
      </div>
    </div>
  </form>
  <p
    className="text-center text-or"
  >
    OR
  </p>
  <a
    className="signup-button"
    onClick={[Function]}
    style={Object {}}
  >
    <button
      className="signup btn btn-lg btn-default btn-block"
      disabled={false}
      type="button"
    >
      SIGN UP
    </button>
  </a>
</div>
`;
